@@ -22,6 +22,7 @@ Package org.springframework.core
 Package org.springframework.jdbc
 * added exception translation based on SQLException sub-classes introduced in Java 6
 * added additional exceptions to divide hierarchy into Recoverable, Transient and NonTransient exceptions
+* added support for arrays of values in parameter value lists - "select * from t where (a, b) in ((1,'x'), (3,'y'))"
 * added DerbyMaxValueIncrementer to provide an alternative for autoGeneratedKeys used with IDENTITY columns
 * added HsqlSequenceMaxValueIncrementer to support sequences now added to HSQL
 * added H2SequenceMaxValueIncrementer to support sequences in H2 Database
